make protobuf optional
Signed-off-by: Gregor Zeitlinger <gregor.zeitlinger@grafana.com>