@@ -2,67 +2,30 @@ package io.prometheus.metrics.it.exporter.test;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
 
-import com.google.common.io.Files;
 import com.google.common.io.Resources;
-import io.prometheus.client.it.common.LogConsumer;
-import io.prometheus.client.it.common.Volume;
+import io.prometheus.client.it.common.ExporterTest;
 import io.prometheus.metrics.expositionformats.generated.com_google_protobuf_4_28_3.Metrics;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.net.HttpURLConnection;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.concurrent.TimeUnit;
-import java.util.zip.GZIPInputStream;
-import org.apache.commons.io.IOUtils;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-import org.junit.jupiter.params.provider.ValueSource;
-import org.testcontainers.containers.BindMode;
-import org.testcontainers.containers.GenericContainer;
 
-abstract class ExporterIT {
-
-  private final GenericContainer<?> sampleAppContainer;
-  private final Volume sampleAppVolume;
-  private final String sampleApp;
+abstract class ExporterIT extends ExporterTest {
 
   public ExporterIT(String sampleApp) throws IOException, URISyntaxException {
-    this.sampleApp = sampleApp;
-    this.sampleAppVolume =
-        Volume.create("it-exporter")
-            .copy("../../it-" + sampleApp + "/target/" + sampleApp + ".jar");
-    this.sampleAppContainer =
-        new GenericContainer<>("openjdk:17")
-            .withFileSystemBind(sampleAppVolume.getHostPath(), "/app", BindMode.READ_ONLY)
-            .withWorkingDirectory("/app")
-            .withLogConsumer(LogConsumer.withPrefix(sampleApp))
-            .withExposedPorts(9400);
-  }
-
-  @AfterEach
-  public void tearDown() throws IOException {
-    sampleAppContainer.stop();
-    sampleAppVolume.remove();
+    super(sampleApp);
   }
 
   @Test
   public void testOpenMetricsTextFormat() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape("GET", "", "Accept", "application/openmetrics-text; version=1.0.0; charset=utf-8");
     assertThat(response.status).isEqualTo(200);
@@ -84,9 +47,7 @@ abstract class ExporterIT {
 
   @Test
   public void testPrometheusTextFormat() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", "");
     assertThat(response.status).isEqualTo(200);
     assertContentType(
@@ -106,9 +67,7 @@ abstract class ExporterIT {
 
   @Test
   public void testPrometheusProtobufFormat() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -136,28 +95,23 @@ abstract class ExporterIT {
   }
 
   @ParameterizedTest
-    @CsvSource({
-      "openmetrics,         debug-openmetrics.txt",
-      "text,                debug-text.txt",
-      "prometheus-protobuf, debug-protobuf.txt",
-    })
+  @CsvSource({
+    "openmetrics,         debug-openmetrics.txt",
+    "text,                debug-text.txt",
+    "prometheus-protobuf, debug-protobuf.txt",
+  })
   public void testPrometheusProtobufDebugFormat(String format, String expected) throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", "debug=" + format);
     assertThat(response.status).isEqualTo(200);
-    assertContentType(
-        "text/plain;charset=utf-8",
-        response.getHeader("Content-Type"));
-      assertThat(response.stringBody().trim()).isEqualTo(Resources.toString(Resources.getResource(expected), UTF_8).trim());
+    assertContentType("text/plain;charset=utf-8", response.getHeader("Content-Type"));
+    assertThat(response.stringBody().trim())
+        .isEqualTo(Resources.toString(Resources.getResource(expected), UTF_8).trim());
   }
 
   @Test
   public void testCompression() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -180,14 +134,12 @@ abstract class ExporterIT {
     assertContentType(
         "application/openmetrics-text; version=1.0.0; charset=utf-8",
         response.getHeader("Content-Type"));
-      assertThat(response.gzipBody()).contains("uptime_seconds_total 17.0");
+    assertThat(response.gzipBody()).contains("uptime_seconds_total 17.0");
   }
 
   @Test
   public void testErrorHandling() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "error")
-        .start();
+    start("error");
     Response response = scrape("GET", "");
     assertThat(response.status).isEqualTo(500);
     assertThat(response.stringBody()).contains("Simulating an error.");
@@ -199,12 +151,10 @@ abstract class ExporterIT {
 
   @Test
   public void testHeadRequest() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response fullResponse = scrape("GET", "");
     int size = fullResponse.body.length;
-    assertThat(size > 0).isTrue();
+    assertThat(size).isGreaterThan(0);
     Response headResponse = scrape("HEAD", "");
     assertThat(headResponse.status).isEqualTo(200);
     if (headReturnsContentLength()) {
@@ -217,9 +167,7 @@ abstract class ExporterIT {
 
   @Test
   public void testDebug() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", "debug=openmetrics");
     assertThat(response.status).isEqualTo(200);
     assertContentType("text/plain; charset=utf-8", response.getHeader("Content-Type"));
@@ -230,9 +178,7 @@ abstract class ExporterIT {
 
   @Test
   public void testNameFilter() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -251,9 +197,7 @@ abstract class ExporterIT {
 
   @Test
   public void testEmptyResponseOpenMetrics() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -271,9 +215,7 @@ abstract class ExporterIT {
 
   @Test
   public void testEmptyResponseText() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", nameParam("none_existing"));
     assertThat(response.status).isEqualTo(200);
     assertContentType(
@@ -287,9 +229,7 @@ abstract class ExporterIT {
 
   @Test
   public void testEmptyResponseProtobuf() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -305,9 +245,7 @@ abstract class ExporterIT {
 
   @Test
   public void testEmptyResponseGzipOpenMetrics() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response =
         scrape(
             "GET",
@@ -323,110 +261,22 @@ abstract class ExporterIT {
 
   @Test
   public void testEmptyResponseGzipText() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", nameParam("none_existing"), "Accept-Encoding", "gzip");
     assertThat(response.status).isEqualTo(200);
     assertThat(response.getHeader("Content-Encoding")).isEqualTo("gzip");
     assertThat(response.gzipBody()).isEmpty();
   }
 
-  private String nameParam(String name) throws UnsupportedEncodingException {
-    return URLEncoder.encode("name[]", UTF_8.name()) + "=" + URLEncoder.encode(name, UTF_8.name());
+  private String nameParam(String name) {
+    return URLEncoder.encode("name[]", UTF_8) + "=" + URLEncoder.encode(name, UTF_8);
   }
 
   @Test
   public void testDebugUnknown() throws IOException {
-    sampleAppContainer
-        .withCommand("java", "-jar", "/app/" + sampleApp + ".jar", "9400", "success")
-        .start();
+    start();
     Response response = scrape("GET", "debug=unknown");
     assertThat(response.status).isEqualTo(500);
     assertContentType("text/plain; charset=utf-8", response.getHeader("Content-Type"));
-  }
-
-  private void assertContentType(String expected, String actual) {
-    if (!expected.replace(" ", "").equals(actual)) {
-      assertThat(actual).isEqualTo(expected);
-    }
-  }
-
-  private Response scrape(String method, String queryString, String... requestHeaders)
-      throws IOException {
-    long timeoutMillis = TimeUnit.SECONDS.toMillis(5);
-    URL url =
-        new URL(
-            "http://localhost:"
-                + sampleAppContainer.getMappedPort(9400)
-                + "/metrics?"
-                + queryString);
-    HttpURLConnection con = (HttpURLConnection) url.openConnection();
-    con.setRequestMethod(method);
-    for (int i = 0; i < requestHeaders.length; i += 2) {
-      con.setRequestProperty(requestHeaders[i], requestHeaders[i + 1]);
-    }
-    long start = System.currentTimeMillis();
-    Exception exception = null;
-    while (System.currentTimeMillis() - start < timeoutMillis) {
-      try {
-        if (con.getResponseCode() == 200) {
-          return new Response(
-              con.getResponseCode(),
-              con.getHeaderFields(),
-              IOUtils.toByteArray(con.getInputStream()));
-        } else {
-          return new Response(
-              con.getResponseCode(),
-              con.getHeaderFields(),
-              IOUtils.toByteArray(con.getErrorStream()));
-        }
-      } catch (Exception e) {
-        exception = e;
-        try {
-          Thread.sleep(100);
-        } catch (InterruptedException ignored) {
-          // ignore
-        }
-      }
-    }
-    if (exception != null) {
-      exception.printStackTrace();
-    }
-    fail("timeout while getting metrics from " + url);
-    return null; // will not happen
-  }
-
-  private static class Response {
-    private final int status;
-    private final Map<String, String> headers;
-    private final byte[] body;
-
-    private Response(int status, Map<String, List<String>> headers, byte[] body) {
-      this.status = status;
-      this.headers = new HashMap<>(headers.size());
-      this.body = body;
-      for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
-        if (entry.getKey()
-            != null) { // HttpUrlConnection uses pseudo key "null" for the status line
-          this.headers.put(entry.getKey().toLowerCase(Locale.ROOT), entry.getValue().get(0));
-        }
-      }
-    }
-
-    private String getHeader(String name) {
-      // HTTP headers are case-insensitive
-      return headers.get(name.toLowerCase(Locale.ROOT));
-    }
-
-    private String stringBody() {
-      return new String(body, UTF_8);
-    }
-
-    private String gzipBody() throws IOException {
-      return new String(
-              IOUtils.toByteArray(new GZIPInputStream(new ByteArrayInputStream(body))),
-              UTF_8);
-    }
   }
 }
